--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run storybook",
-    "install": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap -- --legacy-peer-deps",
     "test": "lerna run test",
     "test:build": "docker build -t test -f build.Dockerfile .",
     "lint": "eslint packages/**/src/**/*.{ts,tsx}",
@@ -18,7 +16,7 @@
     "lerna:update": "lernaupdate",
     "lerna:dedupe": "lernaupdate --dedupe",
     "ncu": "lerna exec 'npx npm-check-updates \"/fusion-wc.*/\" -u'",
-    "postncu": "npm run bootstrap",
+    "postncu": "npm run install",
     "prepare": "husky install"
   },
   "repository": {
